// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Richtext Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title
          </span>
        </span>
      </h2>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Richtext Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title
          </span>
        </span>
      </h2>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Richtext Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title
          </span>
        </span>
      </h2>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
